--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@material-ui/core": "^3.8.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "redux": "^4.0.1",
+    "reselect": "^4.0.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
